Fixed widths of paragraph and cards on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ h2 {
 
 p {
   text-align: center;
+  max-width: 34ch;
 }
 @media screen and (min-width: 768px) {
   p {
@@ -90,6 +91,7 @@ p {
   border-top: 0.4rem solid;
   border-radius: 0.4rem;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0, 50, 100, 0.15);
+  max-width: 20rem;
 }
 .card.supervisor {
   padding: 1rem;
@@ -97,6 +99,7 @@ p {
   border-top: 0.4rem solid hsl(180, 62%, 55%);
   border-radius: 0.4rem;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0, 50, 100, 0.15);
+  max-width: 20rem;
 }
 .card.team-builder {
   padding: 1rem;
@@ -104,6 +107,7 @@ p {
   border-top: 0.4rem solid hsl(0, 78%, 62%);
   border-radius: 0.4rem;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0, 50, 100, 0.15);
+  max-width: 20rem;
 }
 .card.karma {
   padding: 1rem;
@@ -111,6 +115,7 @@ p {
   border-top: 0.4rem solid hsl(34, 97%, 64%);
   border-radius: 0.4rem;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0, 50, 100, 0.15);
+  max-width: 20rem;
 }
 .card.calculator {
   padding: 1rem;
@@ -118,6 +123,7 @@ p {
   border-top: 0.4rem solid hsl(212, 86%, 64%);
   border-radius: 0.4rem;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0, 50, 100, 0.15);
+  max-width: 20rem;
 }
 .card .card-title {
   font-size: 1.25rem;
