--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -6,4 +6,5 @@
   border-top: $card-border-radius solid $border-color;
   border-radius: $card-border-radius;
   box-shadow: 0 1rem 1.5rem -0.5rem rgba(0 50 100 / 0.15);
+  max-width: 20rem;
 }
